--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Yeoman generator for AngularJS / Slim : yeoman, generator, AngularJS, Slim">
+    <title>Yeoman generator for AngularJS / Slim by leduong</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Yeoman generator for AngularJS / Slim</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Yeoman generator for AngularJS / Slim</h1>
+        <p>yeoman, generator, AngularJS, Slim</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/leduong/generator-slimangular">View on GitHub</a>
+        <p class="view"><a href="https://github.com/leduong/generator-slimangular">View the Project on GitHub <small>leduong/generator-slimangular</small></a></p>
 
-          <h1 id="project_title">Yeoman generator for AngularJS / Slim</h1>
-          <h2 id="project_tagline">yeoman, generator, AngularJS, Slim</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/leduong/generator-slimangular/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/leduong/generator-slimangular/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/leduong/generator-slimangular/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/leduong/generator-slimangular/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/leduong/generator-slimangular">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1>
 <a name="generator-slimangular-" class="anchor" href="#generator-slimangular-"><span class="octicon octicon-link"></span></a>generator-slimangular <a href="https://travis-ci.org/leduong/generator-slimangular"><img src="https://secure.travis-ci.org/leduong/generator-slimangular.png?branch=master" alt="Build Status"></a>
 </h1>
@@ -72,7 +69,7 @@
 
 <p>Install the Angular-Slim generator:</p>
 
-<pre><code>npm install https://github.com/leduong/generator-slimangular/archive/v1.0.tar.gz
+<pre><code>npm install -g https://github.com/leduong/generator-slimangular/archive/0.1.3.tar.gz
 </code></pre>
 
 <p>The above prerequisites can be installed to a VM using the <a href="https://github.com/leduong/generator-slimangular">Angular Slim provisioner</a>.</p>
@@ -115,7 +112,7 @@ yo slimangular:app
 
 <ul>
 <li>a name (TitleCase "First Name", "Last Name", "Birthday"...)</li>
-<li>a type (String, Integer, Float, Boolean, Date, Enum)</li>
+<li>a type (String, Char, Text, Integer, Float, Boolean, Date, Enum, Email, Password)</li>
 <li>for a String attribute, an optional minimum and maximum length</li>
 <li>for a numeric attribute, an optional minimum and maximum value</li>
 <li>for a Date attribute, an optional constraint to either past values or future values</li>
@@ -128,14 +125,20 @@ yo slimangular:app
 <pre><code>php composer.phar update
 </code></pre>
 
+<p>Run migration DB:</p>
+
+<pre><code>$ cd server
+$ ./bin/phpmig migrate
+</code></pre>
+
 <p>Run the service:</p>
 
-<pre><code>php -S 127.0.0.1:8080 -t public
+<pre><code>$ php -S 127.0.0.1:8080 -t public
 </code></pre>
 
 <p>A client-side AngularJS application will now be available by running</p>
 
-<pre><code>grunt
+<pre><code>$ grunt
 </code></pre>
 
 <p>The Grunt server will run at <a href="http://localhost:9000">http://localhost:9000</a>.  It will proxy REST requests to the Slim service running at <a href="http://localhost:8080">http://localhost:8080</a>.</p>
@@ -156,17 +159,12 @@ yo slimangular:app
 
 <p>MIT</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Yeoman generator for AngularJS / Slim maintained by <a href="https://github.com/leduong">leduong</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/leduong">leduong</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
